...
          mainAxisSize: MainAxisSize.min,
          children: [
            if (topicConfig.addMenuItems.contains(AddMenuItemType.mark))
              ListTile(
                key: const Key('michiInfo_button_addMark'),
                leading: const Icon(Icons.place),
                title: const Text('地点を追加'),
                onTap: () {
                  Navigator.of(sheetContext).pop();
                  if (mounted) {
                    context
                        .read<MichiInfoBloc>()
                        .add(const MichiInfoInsertMarkPressed());
...
  Widget build(BuildContext context) {
    final projection = widget.projection;
    final markActionItems = widget.markActionItems;

    if (projection.items.isEmpty) {
      return Scaffold(
        body: const Center(child: Text('地点/区間がありません')),
        floatingActionButton: widget.topicConfig.addMenuItems.isEmpty
            ? null
            : FloatingActionButton(
                key: const Key('michiInfo_fab_add'),
                onPressed: () => context
                    .read<MichiInfoBloc>()
...
        ),
      ),
      child: Row(
        mainAxisSize: MainAxisSize.min,
        children: [
          Text(
            'メーター差分',
            style: Theme.of(context).textTheme.bodySmall?.copyWith(
                  fontSize: 10,
                  color: _markPrimaryColor,
                  fontWeight: FontWeight.w600,
                ),
          ),
          const SizedBox(width: 8),
          Text(
            '区間距離',
            style: Theme.of(context).textTheme.bodySmall?.copyWith(
                  fontSize: 10,
                  color: _linkPrimaryColor,
                  fontWeight: FontWeight.w600,
                ),
          ),
...
